add files task 3

--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -1,4 +1,31 @@
+ 
 @charset "UTF-8";
+/** Holberton Practice Styles
+ * ------ Header
+ */
+
+header {
+	background-color: #FFFFFF;
+	background-image: url("../images/logo.png");
+	background-repeat: no-repeat;
+	background-position: 20px 50%;
+	height: 70px;
+	width: 100%;
+	border-bottom: 1px solid #CCCCCC;
+}
+
+#api_status {
+	height: 40px;
+	width: 40px;
+	border-radius: 50%;
+	background-color: #cccccc;
+	float: right;
+	margin: 15px 15px 30px 0;
+}
+
+#api_status.available {
+	background-color: #FF545F;
+}@charset "UTF-8";
 /** Holberton Practice Styles
  * ------ Header
  */
