--- a/web_dynamic/templates/100-hbnb.html
+++ b/web_dynamic/templates/100-hbnb.html
@@ -56,11 +56,11 @@
 		        <h4>&nbsp;</h4>
 			    <ul class="popover">
 			            {% for state in states|dictsort %}
-				    <input type="checkbox" data-id="{{ state.id }}" data-name="{{ state.name }}">
+				    <INPUT type="checkbox" style="float: left; margin-right: 10px" data-id="{{ state.id }}" data-name="{{ state.name }}">
 				          <H2>{{ state[0] }}</H2>
 					        <UL>
 						  {% for city in state[1].cities|sort(attribute='name') %}
-						  <LI><input type="checkbox" data-id="{{ city.id }}" data-name="{{ city.name }}">{{ city.name }}</LI>
+						  <LI><INPUT type="checkbox" style="float: left; margin-right: 10px" data-id="{{ city.id }}" data-name="{{ city.name }}">{{ city.name }}</LI>
 						  {% endfor %}
 						        </UL>
 						      {% endfor %}
